# ozza

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
backend/: _ozza.py  api_service.py  exceptions.py  ozza.py  readme.md  requirements.txt  rest_api.py  utils.py
backend/docker/: Dockerfile  start.sh  test.sh
backend/ozza/: __init__.py  exceptions.py
backend/rest_api/: __init__.py  api_service.py  member_api.py  ozza_api_view.py  resource_api.py
backend/tests/: ozza_test.py  utils_test.py
rest_api/: resource_api.py
src/: app.py
src/app/: __init__.py  resource_api.py  utils.py
src/app/api/: resource.py
src/app/contracts/: enums.py  resource_data.py
src/core/: utils.py
